0023636: Problems initialising errorStream OSD_Error.cxx is protected for the case if errorStream is NULL