src/OSD/OSD_Error.cxx
@@ -634,6 +634,9 @@ OSD_Error :: OSD_Error () {
 
 void OSD_Error :: Perror () {
 
+  if (errorStream == NULL)
+    return;
+
  Standard_Character buff[ 32 ];
  Standard_CString   ptr;
 
@@ -807,9 +810,12 @@ Standard_Boolean OSD_Error :: Failed () const {
 void OSD_Error :: Reset () {
 
  myErrno = ERROR_SUCCESS; 
- ( *errorStream ).clear ();
- ( *errorStream ).seekp ( 0 );
- ( *errorStream ).clear ();
+ if (errorStream != NULL)
+ {
+   ( *errorStream ).clear ();
+   ( *errorStream ).seekp ( 0 );
+   ( *errorStream ).clear ();
+ }
 
 }  // end OSD_Error :: Reset
 
